// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Meetings/Webex Remote Media All Remote Media 1`] = `
Array [
  <div
    className="wxc wxc-remote-media wxc-remote-media--remote-video-n-share"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <video
      autoPlay={true}
      className="wxc-remote-media__video wxc-remote-media__remote-video"
      muted={true}
      playsInline={true}
    />
    <video
      autoPlay={true}
      className="wxc-remote-media__video wxc-remote-media__remote-share"
      muted={true}
      playsInline={true}
    />
    <audio
      autoPlay={true}
    />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Remote Media Error 1`] = `
Array [
  <div
    className="wxc wxc-remote-media"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="wxc-remote-media__media-error"
    >
      <svg
        className="wxc-icon wxc-remote-media__error-icon"
        fill="none"
        height="73"
        style={Object {}}
        viewBox="0 0 83 73"
        width="83"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M41.5484 7.89762e-05L41.5574 0C54.5206 3.83854e-05 65.2033 9.6817 66.6228 22.1714C67.3189 22.0675 68.0527 22 68.7943 22C76.7226 22 83.134 28.461 82.9167 36.3772L82.9167 36.3782C82.6989 44.0427 76.2265 50 68.5421 50H51.3929C50.4139 50 49.4654 50.4876 48.8975 51.3134L45.6396 56.05H48.3666C50.1613 56.05 51.0857 58.1689 49.7861 59.4571L37.3277 71.8071C36.7385 72.3913 35.9234 72.3488 35.3923 71.9858C34.8618 71.6231 34.5279 70.8745 34.8957 70.1218L38.595 62.1H33.4872C31.9311 62.1 30.8535 60.351 31.7942 58.9897L38.8008 48.5463C39.1093 48.0864 39.7355 47.9615 40.1994 48.2674C40.6633 48.5732 40.7892 49.194 40.4807 49.6538L33.4756 60.095C33.4778 60.0974 33.4798 60.0989 33.4808 60.0995C33.4809 60.0996 33.4809 60.0996 33.481 60.0996C33.4818 60.0998 33.4837 60.1 33.4872 60.1H39.3886C39.9668 60.1 40.415 60.4257 40.6557 60.8007C40.8913 61.1677 41.0066 61.7085 40.7546 62.2274L37.9052 68.4063L48.3523 58.05H44.6846C43.4774 58.05 42.7292 56.7004 43.4524 55.6798L47.2305 50.1867C48.1757 48.8125 49.7492 48 51.3929 48H68.5421C75.1818 48 80.7137 42.8579 80.8999 36.3228C81.0861 29.5391 75.594 24 68.7943 24C68.0837 24 67.3632 24.0742 66.6681 24.1892C66.5509 28.3427 65.1641 31.3938 63.4167 33.2196C62.5011 34.1762 61.4556 34.8256 60.4164 35.0693C59.3663 35.3155 58.2581 35.1495 57.4475 34.366L57.4383 34.3572L57.4384 34.3571C55.6397 32.5741 56.2271 29.9533 57.6972 27.8705C59.1141 25.8629 61.5552 23.9616 64.6598 22.7943C63.5386 11.1151 53.6238 2.0023 41.5619 2.00004C30.6822 2.09791 21.5933 9.47916 19.0309 19.4958C18.9089 19.9724 18.4556 20.2904 17.9617 20.2459C17.4075 20.196 16.8427 20.15 16.2877 20.15C8.37609 20.15 1.92926 26.6407 2.16443 34.5205L2.16458 34.5255C2.35219 42.1044 8.88706 48.15 16.5903 48.15H21.3315C21.8887 48.15 22.3403 48.5978 22.3403 49.15C22.3403 49.7023 21.8887 50.15 21.3315 50.15H16.5903C7.85141 50.15 0.364967 43.297 0.147695 34.5771C-0.12007 25.558 7.25274 18.15 16.2877 18.15C16.6315 18.15 16.9725 18.1649 17.2993 18.1863C20.3583 7.72281 30.0308 0.101567 41.5484 7.89762e-05ZM64.6074 24.9762C62.216 26.0218 60.3986 27.5318 59.3502 29.0171C58.0617 30.8427 58.1414 32.2198 58.8601 32.9381C59.059 33.1274 59.3999 33.2524 59.952 33.123C60.519 32.9901 61.2357 32.5926 61.9531 31.843C63.1979 30.5423 64.3541 28.266 64.6074 24.9762Z"
          fill="url(#paint0_linear)"
          fillRule="evenodd"
        />
        <defs>
          <linearGradient
            gradientUnits="userSpaceOnUse"
            id="paint0_linear"
            x1="41.5313"
            x2="41.5313"
            y1="0"
            y2="72.2535"
          >
            <stop
              stopColor="var(--wxc-icon--error--gradient-start-color)"
            />
            <stop
              offset="1"
              stopColor="var(--wxc-icon--error--gradient-stop-color)"
            />
          </linearGradient>
        </defs>
      </svg>
      <div>
        Having trouble joining the meeting?
      </div>
      <div>
        Please check your connection.
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Remote Media Loading 1`] = `
Array [
  <div
    className="wxc wxc-remote-media"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="wxc wxc-badge wxc-remote-media__connecting-badge"
      style={Object {}}
    >
      <div
        className="wxc wxc-spinner wxc-remote-media__connecting-spinner"
        style={
          Object {
            "height": 16,
            "width": 16,
          }
        }
      />
      <span>
        Connecting
      </span>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Remote Media Remote Audio Only 1`] = `
Array [
  <div
    className="wxc wxc-remote-media"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <audio
      autoPlay={true}
    />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Remote Media Remote Video Only 1`] = `
Array [
  <div
    className="wxc wxc-remote-media"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <video
      autoPlay={true}
      className="wxc-remote-media__video wxc-remote-media__remote-video"
      muted={true}
      playsInline={true}
    />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Remote Media Waiting For Others 1`] = `
Array [
  <div
    className="wxc wxc-remote-media"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <h5
      className="wxc wxc-title wxc-title--subsection"
      style={Object {}}
    >
      Waiting for others to join...
    </h5>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
